fix: cover more pages to follow spacing/padding on mobile

--- a/app/styles/dashboard.apps.css
+++ b/app/styles/dashboard.apps.css
@@ -2,4 +2,8 @@
   div.mantine-Col-root section:last-of-type .pokt-card {
     margin-bottom: 0;
   }
+
+  div.mantine-Col-root section .pokt-app-requests-rate .pokt-card {
+    margin-bottom: 32px;
+  }
 }
